--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               plugin.xml
-
+bin.includes = plugin.xml,\
+               META-INF/,\
+               .,\
+               icons/
